--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
         </style>
     </head>
     <body>
+        <div>
+            <h1 class="degree"></h1>
+        </div>
         <div class="compass">
             <div class="arrow"></div>
             <div class="compass-circle"></div>
@@ -117,8 +120,9 @@
 
         function handler(e) {
             compass = e.webkitCompassHeading || Math.abs(e.alpha - 360);
+            console.log(compass);
             compassCircle.style.transform = `translate(-50%, -50%) rotate(${-compass}deg)`;
-
+            document.querySelector('.degree').innerHTML(compass);
             // ±15 degree
             if (
                 (pointDegree < Math.abs(compass) &&
