--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                     let html = 'Heading in degrees: ' + heading;
                     //if(heading < 0) heading = 360 + heading;
-                    var headingAdjusted = 270 + heading;
+                    var headingAdjusted = heading;
 
                     //heading - 90;
                     console.log('adjusted heading Before: ' + headingAdjusted);
